@@ -1,3 +1,8 @@
+Sat Mar 21 08:17:41 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* win32/win32.c (rb_w32_spawn, rb_w32_aspawn): omit program name
+	  if actual program path is found.  [ruby-core:22960]
+
 Sat Mar 21 07:25:56 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* io.c (pipe_open): should pass program name even if multiple
